[package]
name = "s54"
version = "0.1.0"
authors = ["b1tg <b1tg@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.10", features = ["socks", "json"] } 
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
rust-crypto = "^0.2"
hex = "^0.4"
aes-gcm = { version = "0.9.4", features = ["aes"] }